--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <hr />
 <div class="game">
   <p class="introgame">
-    Click on the "Go CORONA" below to play the game. It will be great to see your comments below, so please do like and comment to let us know how is our game and was there something missing.
+    It will be great to see your comments below, so please do like and comment to let us know how is our game and was there something missing.
 
   </p>
-  <a href="https://scratch.mit.edu/projects/419124506" class="link"> Go CORONA</a>
+  <iframe src="https://scratch.mit.edu/projects/419124506/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 
   </body>
