--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 <hr />
 <div class="game">
   <p class="introgame">
-    It will be great to see your comments below, so please do like and comment to let us know how is our game and was there something missing.
-
+    It is only not available for android! sorry.
   </p>
   <iframe src="https://scratch.mit.edu/projects/419124506/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
