--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
 </div>
 <hr />
 <div class="game">
-  <p class="introgame">
-    It is only not available for android! sorry.
-  </p>
+  <h3> Instrctions</h3>
+   <p>
+    Catch mask emoji, sanitizer and covid vaccine but Beware of Corona!!!  
+   </p>
   <iframe src="https://scratch.mit.edu/projects/419124506/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
-
+    <p>Not available in androids</p>
   </body>
 </html>
